--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,19 @@
     </head>
     <body>
         <h1 id="title">List of Entries</h1>
+        <div id="hero">
+            <div class="col-lg-6">
+                <div class="hero__search__form">
+                    <form action="#">
+                        <input type="text" placeholder="What do yo u need?"/>
+                        <button type="submit" class="site-btn">SEARCH</button>
+                    </form>
+                </div>
+                    <div class="hero__search__phone__text">
+                        <h5>ETH 3.00</h5>
+                    </div>
+             </div>
+        </div>
         <div id="body">
             <div id="categoryInfo">
                 <p>Category: <span id="catTitle"></span></p>
