--- a/ui/template.OLD.html
+++ b/ui/template.OLD.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="eng">
 
@@ -34,7 +35,7 @@
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
             <div class="header__logo">
-                <a href="./index.html"><div class="logo"><h1>Zon <span class="blue">Directory</span></h1></div></a>
+                <a href="./index.html"><div class="logo">Zon <span class="blue">Directory</span></div></a>
             </div>
         </div>
         <div class="humberger__menu__widget">
@@ -119,7 +120,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="header__logo">
-                        <a href="./index.html"><div class="logo"><h1>Zon <span class="blue">Directory</span></h1></div></a>
+                        <a href="./index.html"><div class="logo">Zon <span class="blue">Directory</span></div></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -129,7 +130,7 @@
                             <button type="submit" class="site-btn">SEARCH</button>
                         </form>
                     </div>
-                            <div class="hero__search__phone__text">
+                        <div class="hero__search__phone__text">
                             <h5>ETH 3.00</h5>
                         </div>
                  </div>
@@ -185,7 +186,7 @@
                         </ul>
                        </div>
                     </div>
-                    <div class="hero__item set-bg z-0" data-setbg="img/hero/banner-updated.jpg">
+                    <div class="hero__item set-bg z-0" data-setbg="img/hero/banner.jpg">
                         <div class="hero__text">
                             <span>NEW BOOKS</span>
                             <h2>eBOOKS</h2>
