--- a/ui/template.html
+++ b/ui/template.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-60199552-4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-60199552-4');
+    </script>
+
     <meta charset="UTF-8"/>
     <meta name="description" content="Ogani Template"/>
     <meta name="keywords" content="Ogani, unica, creative, html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Zon Directory</title>
+    <script src="js/jquery-3.3.1.min.js"></script>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&amp;display=swap" rel="stylesheet"/>
@@ -21,6 +32,28 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
+
+    <script src="js/web3modal/index.js"></script>
+    <script type="text/javascript" src="artifacts/mewconnect.js"></script>
+    <xi:include href="#head"/>
+
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2915344898592053');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=2915344898592053&amp;ev=PageView&amp;noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -28,6 +61,12 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
+
+    <p style="display: none; color: red" id="wrongNetWarning">Your browser isn't configured for POA network. You can only read
+        not write.
+        <a href="https://help.zondirectory.com/configure-poa-network/">Configure POA network.</a></p>
+    <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
+    <p style="color: red">The software is not yet configured to use with real money and real data.</p>
 
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
@@ -52,12 +91,12 @@
             <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
                             <li><a href="./shop-grid.html">Shop</a></li>
-                            <li><a href="#">Author's Dashboard</a></li>
-                            <li><a href="#">Publish files</a></li>
-                            <li><a href="#">post links</a></li>
-                            <li><a href="#">Vote</a></li>
-                            <li><a href="#">Settings</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="author.html">Author's Dashboard</a></li>
+                            <li><a href="description.html">Publish files</a></li>
+                            <li><a href="post-link.html">post links</a></li>
+                            <li><a href="vote.html">Vote</a></li>
+                            <li><a href="settings.html">Settings</a></li>
+                            <li><a href="help.html">Help</a></li>
                             <li><a href="#"><i class="fa-facebook fa"></i></a></li>
                             <li><a href="#"><i class="fa-twitter fa"></i></a></li>
                         </ul>
@@ -71,12 +110,12 @@
         </div>
         <div class="humberger__menu__contact">
             <ul>
-                <li><a href="#">Root Category</a></li>
+                <li><a id="rootLink">Root Category</a></li>
                 <li><a href="#">Recent Items</a></li>
-                <li><a href="#">Create Category</a></li>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">For Shareholders</a></li>
-                <li><a href="#">For Affiliate</a></li>
+                <li><a href="edit-category.html">Create Category</a></li>
+                <li><a href="terms-of-use.html">Terms of Use</a></li>
+                <li><a href="shareholder.html">For Shareholders</a></li>
+                <li><a href="affiliates.html">For Affiliate</a></li>
             </ul>
         </div>
     </div>
@@ -90,12 +129,12 @@
                     <div class="col-lg-8 col-md-8">
                         <div class="header__top__left">
                             <ul>
-                                <li><a href="#">Root Category</a></li>
-                                <li><a href="#">Recent Items</a></li>
-                                <li><a href="#">Create Category</a></li>
-                                <li><a href="#">Terms of Use</a></li>
-                                <li><a href="#">For Shareholders</a></li>
-                                <li><a href="#">For Affiliate</a></li>
+                                <li><a id="rootLink">Root Category</a></li>
+                                <li><a href="index.html">Recent Items</a></li>
+                                <li><a href="edit-category.html">Create Category</a></li>
+                                <li><a href="terms-of-use.html">Terms of Use</a></li>
+                                <li><a href="shareholder.html">For Shareholders</a></li>
+                                <li><a href="affiliates.html">For Affiliate</a></li>
                             </ul>
                         </div>
                     </div>
@@ -161,7 +200,7 @@
                             <li><a href="#">Videos</a></li>
                             <li><a href="#">Household goods</a></li>
                             <li><a href="#">Software</a></li>
-                            <li><a href="#">Root</a></li>
+                            <li><a id="rootLink">Root</a></li>
                             <li><a href="#">Sources</a></li>
                             <li><a href="#">Spam</a></li>
                             <li><a href="#">Others</a></li>
@@ -174,11 +213,11 @@
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
                             <li><a href="./shop-grid.html">Shop</a></li>
-                            <li><a href="#">Author's Dashboard</a></li>
-                            <li><a href="#">Publish files</a></li>
-                            <li><a href="#">post links</a></li>
-                            <li><a href="#">Vote</a></li>
-                            <li><a href="#">Settings</a></li>
+                            <li><a href="author.html">Author's Dashboard</a></li>
+                            <li><a href="description.html">Publish files</a></li>
+                            <li><a href="post-link.html">post links</a></li>
+                            <li><a href="vote.html">Vote</a></li>
+                            <li><a href="settings.html">Settings</a></li>
                             <li><a href="#">Help</a></li>
                             <li><a href="#"><i class="fa-facebook fa"></i></a></li>
                             <li><a href="#"><i class="fa-twitter fa"></i></a></li>
@@ -574,8 +613,10 @@
 	</section>
     <!-- Footer Section End -->
 
+    <div id="wait" style="display: none; position: fixed; top: 50%; left: 50%; margin-right: -50%;
+    transform: translate(-50%, -50%); width: 200px; height: 100px; border: 1px solid red; background: lightgray;">Don't close the window!</div>
+
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
@@ -583,8 +624,6 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
-
 
 </body>
 
