put back old code

--- a/ui/index.html
+++ b/ui/index.html
@@ -93,6 +93,204 @@
                     </p>
                 </audio>
             </div>
+    <!-- Featured Section Begin -->
+    <section class="featured spad">
+        <div class="container">
+            <div class="row featured__filter">
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">Software</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div>
+                        </div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">Videos</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div>
+                        </div>
+                        <div class="new">NEW</div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Download</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fresh-meat">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">E-Books</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div></div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood oranges">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">E-Books</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div></div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">Software</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div></div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fastfood">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">Videos</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div>
+                        </div>
+                        <div class="new">NEW</div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Download</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
+                        <div class="featured__item">
+                            <div class="description">
+                                <div class="featured__item__text">
+                                    <h6 class="Ccategories"><a href="#">E-Books</a></h6>
+                                    <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                                </div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood vegetables">
+                        <div class="featured__item">
+                        <div class="description">
+                            <div class="featured__item__text">
+                                <h6 class="Ccategories"><a href="#">E-Books</a></h6>
+                                <h5 class="title">Lorem Ipsum is simply dummy text</h5>
+                            </div></div>
+                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                                <div class="featured__item__pic__hover">
+                                    <a href="./shop-details.html" class="btn">Quick View</a>
+                                </div>
+                            </div>
+                            <div class="featured__item__text col-md-12">
+                                <h6 class="price"><a href="#">ETH6.00</a></h6>
+                                <h5 class="option">Buy</h5>
+                            </div>
+                            <div class="featured__item__text hover__area">
+                                <a href="#"><i class="fa fa-random"></i></a>
+                                <a href="#" class="primary-btn">Add to Cart</a>
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+    <!-- Featured Section End -->
         </div>
     </body>
 </html>
