moved featured to correct place

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,64 +27,6 @@
              </div>
         </div>
         <div id="body">
-    <!-- Hero Section Begin -->
-    <section class="Hero__Section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="hero__categories">
-                        <div class="hero__categories__all">
-                            <i class="fa fa-bars"></i>
-                            <span>CATEGORIES</span>
-                        </div>
-                        <ul>
-                            <li><a href="#">E-books</a></li>
-                            <li><a href="#">Musical Instruments</a></li>
-                            <li><a href="#">Camera &amp; Photography</a></li>
-                            <li><a href="#">Accessories</a></li>
-                            <li><a href="#">Smart phone &amp; Tablets</a></li>
-                            <li><a href="#">Binaries</a></li>
-                            <li><a href="#">Videos</a></li>
-                            <li><a href="#">Household goods</a></li>
-                            <li><a href="#">Software</a></li>
-                            <li><a id="rootLink">Root</a></li>
-                            <li><a href="#">Sources</a></li>
-                            <li><a href="#">Spam</a></li>
-                            <li><a href="#">Others</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-9 pLR-0">
-                    <div class="hero__search">
-                        <div class="header__menu">
-                        <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
-                            <li><a href="author.html">Author's Dashboard</a></li>
-                            <li><a href="description.html">Publish files</a></li>
-                            <li><a href="post-link.html">post links</a></li>
-                            <li><a href="vote.html">Vote</a></li>
-                            <li><a href="settings.html">Settings</a></li>
-                            <li><a href="#">Help</a></li>
-                            <li><a href="#"><i class="fa-facebook fa"></i></a></li>
-                            <li><a href="#"><i class="fa-twitter fa"></i></a></li>
-                        </ul>
-                       </div>
-                    </div>
-                    <div class="hero__item set-bg z-0" data-setbg="img/hero/banner-updated.jpg">
-                        <div class="hero__text">
-                            <span>NEW BOOKS</span>
-                            <h2>eBOOKS</h2>
-                            <p>ETH5.00</p>
-                            <a href="#" class="primary-btn">BUY NOW</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Hero Section End -->
-
     <div id="categoryInfo">
         <p>Category: <span id="catTitle"></span></p>
         <p id="showDescription" style="display: none">Description: <span id="description"></span></p>
@@ -351,5 +293,15 @@
     </section>
     <!-- Featured Section End -->
         </div>
-    </body>
+        <div id="featured">
+            <div class="hero__item set-bg z-0" data-setbg="img/hero/banner-updated.jpg">
+                <div class="hero__text">
+                    <span>NEW BOOKS</span>
+                    <h2>eBOOKS</h2>
+                    <p>ETH5.00</p>
+                    <a href="#" class="primary-btn">BUY NOW</a>
+                </div>
+            </div>
+        </div>
+</body>
 </html>
