--- a/ui/index.html
+++ b/ui/index.html
@@ -303,5 +303,22 @@
                 </div>
             </div>
         </div>
+        <div id="sidebarCategories">
+            <ul>
+                <li><a href="#">E-books</a></li>
+                <li><a href="#">Musical Instruments</a></li>
+                <li><a href="#">Camera &amp; Photography</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Smart phone &amp; Tablets</a></li>
+                <li><a href="#">Binaries</a></li>
+                <li><a href="#">Videos</a></li>
+                <li><a href="#">Household goods</a></li>
+                <li><a href="#">Software</a></li>
+                <li><a id="rootLink">Root</a></li>
+                <li><a href="#">Sources</a></li>
+                <li><a href="#">Spam</a></li>
+                <li><a href="#">Others</a></li>
+            </ul>
+        </div>
 </body>
 </html>
