--- a/ui/index.html
+++ b/ui/index.html
@@ -314,7 +314,7 @@
                 <li><a href="#">Videos</a></li>
                 <li><a href="#">Household goods</a></li>
                 <li><a href="#">Software</a></li>
-                <li><a id="rootLink">Root</a></li>
+                <li><a class="rootLink">Root</a></li>
                 <li><a href="#">Sources</a></li>
                 <li><a href="#">Spam</a></li>
                 <li><a href="#">Others</a></li>
