--- a/ui/template.OLD.html
+++ b/ui/template.OLD.html
@@ -36,7 +36,7 @@
             <!-- End Facebook Pixel Code -->
     </head>
     <body>
-        <p><a id="rootLink">Root category</a> |
+        <p><a class="rootLink">Root category</a> |
             <a href="index.html">Recent items</a> |
             <a href="author.html">Author's dashboard</a> |
             <a href="description.html">Publish files or sell something</a> |
