--- a/ui/template.html
+++ b/ui/template.html
@@ -110,7 +110,7 @@
         </div>
         <div class="humberger__menu__contact">
             <ul>
-                <li><a id="rootLink">Root Category</a></li>
+                <li><a class="rootLink">Root Category</a></li>
                 <li><a href="#">Recent Items</a></li>
                 <li><a href="edit-category.html">Create Category</a></li>
                 <li><a href="terms-of-use.html">Terms of Use</a></li>
@@ -129,7 +129,7 @@
                     <div class="col-lg-8 col-md-8">
                         <div class="header__top__left">
                             <ul>
-                                <li><a id="rootLink">Root Category</a></li>
+                                <li><a class="rootLink">Root Category</a></li>
                                 <li><a href="index.html">Recent Items</a></li>
                                 <li><a href="edit-category.html">Create Category</a></li>
                                 <li><a href="terms-of-use.html">Terms of Use</a></li>
